--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
                 <div class="web-images">
                     <div class="sub1">
                         <img src="images/Rectangle 8.png" alt="">
-                        <h3 class="image-text">Web devolopment</h3>
+                        <h3 class="image-text1">Web devolopment</h3>
                     </div>
                     <div class="sub2">
                         <img src="images/Rectangle 9.png" alt="">
-                        <h3 class="image-text">Ui Ux Design</h3>
+                        <h3 class="image-text2">Ui Ux Design</h3>
                         
                     </div>
                     <div class="sub3">
                         <img src="images/Rectangle 10.png" alt="">
-                        <h3 class="image-text">App devolopment</h3>
+                        <h3 class="image-text3">App devolopment</h3>
 
                     </div>
                     <div class="sub4">
                         <img src="images/Group 3806.png" alt="">
-                        <h3 class="image-text">DevOps</h3>
+                        <h3 class="image-text4">DevOps</h3>
                     </div>
                 </div>
 
